# IEP

./: lab2.txt
Lab4-final/dreptunghi/: dreptunghi.cpp
Lab4-final/test/: CMakeLists.txt
Lab5/ncomplex/: CMakeLists.txt  ncomplex.cpp  ncomplex.h
Lab5/test/: CMakeLists.txt  main.cpp
Lab5/vect/: a.out  vect.cpp
Lab6/: complex.cpp  whatever
Lab7/: banca.cpp
dreptunghi/: CMakeLists.txt  a.out  dreptunghi.cpp  dreptunghi.h  dreptunghi.hpp  main.cpp
staticlib_test/: an
test/: CMakeLists.txt  main.cpp
